# nxjson

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
test/: CMakeLists.txt  test.c
